Final working version

--- a/style.css
+++ b/style.css
@@ -1,64 +1,39 @@
 * {
-
-margin: 0;
-
-padding:0;
-
-box-sizing: border-box;
-
-font-family: sans-serif;
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 body {
-
-width: 100%;
-
-min-height: 100vh;
-
-display: flex;
-
-justify-content: center;
-
-align-items: center;
-
-background-color: #ffe5e5;
-
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ffe5e5;
 }
 
-
-
-.container{
-display: flex;
-flex-direction: column;
-text-align: center;
-align-items: center;
-gap: 20px;
-max-width: 500px;
-margin: 20px;
-}
-.container .tenor-gif-embedded{
-    max-width: 200px;
+.container {
+  text-align: center;
+  max-width: 400px;
+  padding: 20px;
 }
 
-.container .btn {
-
-display: flex;
-
-gap: 25px;
-
+h1 {
+  margin: 20px 0;
 }
 
-.btn a
-{
-text-decoration: none;
+.btn {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+}
 
-color: #111;
-
-background:#fff;
-
-padding: 10px 25px;
-
-border-radius: 8px;
-
-box-shadow: 0.5rem irem 3rem hs1(0,0%, 0%, 0.3)}
+.btn a {
+  text-decoration: none;
+  background: white;
+  color: black;
+  padding: 10px 25px;
+  border-radius: 8px;
+  box-shadow: 0.5rem 1rem 3rem hsl(0, 0%, 0%, 0.3);
+}
